# madym_cxx

./: .gitattributes  .gitignore  .gitlab-ci.yml  .releaserc.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  generate_citation.sh  license.txt  madym_cxx  madym_cxx.gitlab-ci.yml  mdm_version.h.in  paper.bib  paper.md
madym/: CMakeLists.txt  install.cmake  mdm_AIF.cxx  mdm_AIF.h  mdm_AnalyzeFormat.cxx  mdm_AnalyzeFormat.h  mdm_DCEModel2CXM.cxx  mdm_DCEModel2CXM.h  mdm_DCEModelAUEM.cxx  mdm_DCEModelAUEM.h  mdm_DCEModelBase.cxx  mdm_DCEModelBase.h  mdm_DCEModelDI2CXM.cxx  mdm_DCEModelDI2CXM.h  mdm_DCEModelDIBEM.cxx  mdm_DCEModelDIBEM.h  mdm_DCEModelDIBEM_Fp.cxx  mdm_DCEModelDIBEM_Fp.h  mdm_DCEModelDIETM.cxx  mdm_DCEModelDIETM.h  mdm_DCEModelDISCM.cxx  mdm_DCEModelDISCM.h  mdm_DCEModelETM.cxx  mdm_DCEModelETM.h  mdm_DCEModelFitter.cxx  mdm_DCEModelFitter.h  mdm_DCEModelGenerator.h  mdm_DCEVolumeAnalysis.cxx  mdm_DCEVolumeAnalysis.h  mdm_DCEVoxel.cxx  mdm_DCEVoxel.h  mdm_DWIMapper.cxx  mdm_DWIMapper.h  mdm_ErrorTracker.cxx  mdm_ErrorTracker.h  mdm_Exponentials.h  mdm_FileManager.cxx  mdm_FileManager.h  mdm_Image3D.cxx  mdm_Image3D.h  (+28 more)
madym/dce/: CMakeLists.txt  mdm_AIF.cxx  mdm_AIF.h  mdm_DCEModel2CFM.cxx  mdm_DCEModel2CFM.h  mdm_DCEModel2CXM.cxx  mdm_DCEModel2CXM.h  mdm_DCEModelAUEM.cxx  mdm_DCEModelAUEM.h  mdm_DCEModelBase.cxx  mdm_DCEModelBase.h  mdm_DCEModelDI2CXM.cxx  mdm_DCEModelDI2CXM.h  mdm_DCEModelDIBEM.cxx  mdm_DCEModelDIBEM.h  mdm_DCEModelDIBEM_Fp.cxx  mdm_DCEModelDIBEM_Fp.h  mdm_DCEModelDIETM.cxx  mdm_DCEModelDIETM.h  mdm_DCEModelDISCM.cxx  mdm_DCEModelDISCM.h  mdm_DCEModelETM.cxx  mdm_DCEModelETM.h  mdm_DCEModelFitter.cxx  mdm_DCEModelFitter.h  mdm_DCEModelGenerator.h  mdm_DCEModelMLDRW.cxx  mdm_DCEModelMLDRW.h  mdm_DCEModelNONE.h  mdm_DCEModelPatlak.cxx  mdm_DCEModelPatlak.h  mdm_DCEVoxel.cxx  mdm_DCEVoxel.h  mdm_Exponentials.h
madym/dce_models/: mdm_DCEModel2CFM.h  mdm_DCEModel2CXM.cxx  mdm_DCEModel2CXM.h  mdm_DCEModelAUEM.cxx  mdm_DCEModelAUEM.h  mdm_DCEModelBase.cxx  mdm_DCEModelBase.h  mdm_DCEModelDI2CXM.cxx  mdm_DCEModelDI2CXM.h  mdm_DCEModelDIBEM.cxx  mdm_DCEModelDIBEM.h  mdm_DCEModelDIBEM_Fp.cxx  mdm_DCEModelDIBEM_Fp.h  mdm_DCEModelDIETM.cxx  mdm_DCEModelDIETM.h  mdm_DCEModelDISCM.cxx  mdm_DCEModelDISCM.h  mdm_DCEModelETM.cxx  mdm_DCEModelETM.h  mdm_DCEModelGenerator.h  mdm_DCEModelNONE.cxx  mdm_DCEModelNONE.h  mdm_DCEModelPatlak.cxx  mdm_DCEModelPatlak.h
madym/dwi/: CMakeLists.txt  mdm_DWIFitterADC.cxx  mdm_DWIFitterADC.h  mdm_DWIFitterBase.cxx  mdm_DWIFitterBase.h  mdm_DWIFitterIVIM.cxx  mdm_DWIFitterIVIM.h  mdm_DWIMapper.cxx  mdm_DWIMapper.h  mdm_DWIMethodGenerator.h  mdm_DWIModelGenerator.h
madym/dwi_methods/: mdm_DWIFitterADC.cxx  mdm_DWIFitterADC.h  mdm_DWIFitterBase.cxx  mdm_DWIFitterBase.h  mdm_DWIFitterIVIM.cxx  mdm_DWIFitterIVIM.h  mdm_DWIMethodGenerator.h
madym/image_io/: CMakeLists.txt  mdm_ImageDatatypes.h  mdm_ImageIO.cxx  mdm_ImageIO.h
madym/image_io/analyze/: mdm_AnalyzeFormat.cxx  mdm_AnalyzeFormat.h
madym/image_io/dicom/: mdm_DicomFormat.cxx  mdm_DicomFormat.h
madym/image_io/meta/: mdm_BIDSFormat.cxx  mdm_BIDSFormat.h  mdm_XtrFormat.cxx  mdm_XtrFormat.h
madym/image_io/nifti/: mdm_NiftiFormat.cxx  mdm_NiftiFormat.h  mdm_NiftiFormatAscii.cxx  mdm_NiftiFormatTransforms.cxx  nifti1.h  (+3 more)
madym/opt/: CMakeLists.txt  demo.cxx  mdm_opt_api.h  optimization.cpp
madym/qt_gui/: CMakeLists.txt  README.md  madym_gui.aps  madym_gui.cxx  madym_gui.qrc  madym_gui.rc  madym_gui.ui  madym_gui_model_configure.cxx  madym_gui_model_configure.h  madym_gui_processor.cxx  madym_gui_processor.h  madym_gui_ui.cxx  madym_gui_ui.h  madym_model_configure.ui
madym/run/: CMakeLists.txt  mdm_FileManager.cxx  mdm_FileManager.h  mdm_InputOptions.h  mdm_OptionsParser.cxx  mdm_OptionsParser.h  mdm_ParamSummaryStats.cxx  mdm_ParamSummaryStats.h  mdm_RunTools.cxx  mdm_RunTools.h  mdm_RunToolsDCEFit.cxx  mdm_RunToolsDCEFit.h  mdm_RunToolsT1Fit.cxx  mdm_RunToolsT1Fit.h  mdm_RunToolsVolumeAnalysis.cxx  mdm_RunToolsVolumeAnalysis.h  mdm_RunTools_calculateT1.cxx  mdm_RunTools_calculateT1.h  mdm_RunTools_calculateT1_lite.cxx  mdm_RunTools_calculateT1_lite.h  mdm_RunTools_madym.cxx  mdm_RunTools_madym.h  mdm_RunTools_madym_AIF.cxx  mdm_RunTools_madym_AIF.h  mdm_RunTools_madym_DCE.cxx  mdm_RunTools_madym_DCE.h  mdm_RunTools_madym_DCE_lite.cxx  mdm_RunTools_madym_DCE_lite.h  mdm_RunTools_madym_DWI.cxx  mdm_RunTools_madym_DWI.h  mdm_RunTools_madym_DWI_lite.cxx  mdm_RunTools_madym_DWI_lite.h  mdm_RunTools_madym_DicomConvert.cxx  mdm_RunTools_madym_DicomConvert.h  mdm_RunTools_madym_MakeXtr.cxx  mdm_RunTools_madym_MakeXtr.h  mdm_RunTools_madym_T1.cxx  mdm_RunTools_madym_T1.h  mdm_RunTools_madym_T1_lite.cxx  mdm_RunTools_madym_T1_lite.h  (+4 more)
madym/t1/: CMakeLists.txt  mdm_T1FitterBase.cxx  mdm_T1FitterBase.h  mdm_T1FitterIR.cxx  mdm_T1FitterIR.h  mdm_T1FitterVFA.cxx  mdm_T1FitterVFA.h  mdm_T1Mapper.cxx  mdm_T1Mapper.h  mdm_T1MethodGenerator.h
madym/t1_methods/: mdm_T1FitterBase.cxx  mdm_T1FitterBase.h  mdm_T1FitterIR.cxx  mdm_T1FitterIR.h  mdm_T1FitterVFA.cxx  mdm_T1FitterVFA.h  mdm_T1MethodGenerator.h
madym/tests/: CMakeLists.txt  make_calibration_files.cxx  mdm_test_utils.h  test_AIF.cxx  test_BIDS.cxx  test_DCE_fit.cxx  test_DCE_models.cxx  test_DWI.cxx  test_T1.cxx  test_analyze.cxx  test_boost.cxx  test_driver.cxx  test_image3D.cxx  test_mdm.cxx  test_mdm_exception.cxx  test_nifti.cxx  test_summaryStats.cxx  test_volumeAnalysis.cxx
madym/tools/: CMakeLists.txt  calculate_T1.cxx  calculate_T1_lite.cxx  madym.cxx  madym_AIF.cxx  madym_DCE.cxx  madym_DCE_lite.cxx  madym_DWI.cxx  madym_DWI_lite.cxx  madym_DicomConvert.cxx  madym_MakeXtr.cxx  madym_T1.cxx  madym_T1_lite.cxx  madym_lite.cxx
madym/utils/: CMakeLists.txt  mdm_ErrorTracker.cxx  mdm_ErrorTracker.h  mdm_Image3D.cxx  mdm_Image3D.h  mdm_InputTypes.cxx  mdm_InputTypes.h  mdm_ProgramLogger.cxx  mdm_ProgramLogger.h  mdm_SequenceNames.h  mdm_platform_defs.h
python/: MANIFEST.in  README.md  conda_develop_env.yml  conda_env.yml  pyproject.toml  setup.cfg  setup.py  version.bat  version.sh
(+239 files in other folders)
