[metadata]
name = QbiMadym
version = attr: QbiMadym.__version__
author = Michael Berks
author_email = michael.berks@manchester.ac.uk
description = Python wrappers to main C++ Madym toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/manchester_qbi/manchester_qbi_public/madym_cxx
project_urls =
    Bug Tracker = https://gitlab.com/manchester_qbi/manchester_qbi_public/madym_cxx/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    gitpython
    numpy

[options.packages.find]
where = src